feat: add phrases crud endpoints
Updated openapi doc.

Created temporal error page for phrase routes.
