# docs/openapi.yml
@@ -14,7 +14,7 @@ externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 servers:
-  - url: https://localhost:5000/api/v1
+  - url: http://localhost:5173
 tags:
   - name: phrases
     description: Everything about your Phrase
@@ -36,8 +36,20 @@ paths:
                 items:
                   $ref: "#/components/schemas/Phrase"
       security:
-        - bearerAuth:
-            - read:phrase
+        - cookieAuth: []
+    post:
+      tags:
+        - phrases
+      summary: Creates new phrase
+      description: Creates a new phrase
+      operationId: createPhrase
+      requestBody:
+        $ref: "#/components/requestBodies/UpsertPhrase"
+      responses:
+        "200":
+          description: successful operation
+      security:
+        - cookieAuth: []
   /phrases/{phraseId}:
     get:
       tags:
@@ -50,8 +62,7 @@ paths:
           description: ID of order that needs to be fetched
           required: true
           schema:
-            type: string
-            format: uuid
+            type: number
       responses:
         "200":
           description: successful operation
@@ -59,13 +70,10 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Phrase"
-        "400":
-          description: Invalid ID supplied
         "404":
-          description: Order not found
+          description: Phrase not found
       security:
-        - bearerAuth:
-            - read:phrase
+        - cookieAuth: []
     put:
       tags:
         - phrases
@@ -77,25 +85,16 @@ paths:
           description: ID of order that needs to be fetched
           required: true
           schema:
-            type: string
-            format: uuid
+            type: number
       requestBody:
-        $ref: "#/components/requestBodies/Phrase"
+        $ref: "#/components/requestBodies/UpsertPhrase"
       responses:
-        "201":
+        "200":
           description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Phrase"
-        "400":
-          description: Invalid ID supplied
         "404":
-          description: Order not found
+          description: Phrase not found
       security:
-        - bearerAuth:
-            - read:phrase
-            - write:phrase
+        - cookieAuth: []
     delete:
       tags:
         - phrases
@@ -107,35 +106,37 @@ paths:
           description: ID of the order that needs to be deleted
           required: true
           schema:
-            type: string
-            format: uuid
+            type: number
       responses:
         "204":
           description: successful operation
       security:
-        - bearerAuth:
-            - read:phrase
-            - write:phrase
+        - cookieAuth: []
 components:
   schemas:
     Phrase:
       type: object
       properties:
         id:
-          type: string
-          format: uuid
-          example: b06b68a9-b8f2-4004-9f77-a5ed9771310f
+          type: number
         content:
           type: string
           example: Content
-        owner:
+        user_id:
           type: string
-        createdAt:
-          type: string
-          format: date-time
-        updatedAt:
+          format: uuid
+        created_at:
           type: string
           format: date-time
+        updated_at:
+          type: string
+          format: date-time
+    CreatePhrase:
+      type: object
+      properties:
+        content:
+          type: string
+          example: Content
   requestBodies:
     Phrase:
       description: Phrase object
@@ -143,8 +144,14 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/Phrase"
+    UpsertPhrase:
+      description: Phrase creation and update object
+      content:
+        application/x-www-form-urlencoded:
+          schema:
+            $ref: "#/components/schemas/CreatePhrase"
   securitySchemes:
-    bearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
+    cookieAuth:
+      type: apiKey
+      in: cookie
+      name: supabase-auth-token
